# twitch-alerts

./: .dockerignore  .gitignore  20231234567898_alerts.sql  Cargo.toml  Dockerfile  README.md  alerts.db  alerts.db-shm  alerts.db-wal  fly.toml  sqlite:alerts.db
.github/: dependabot.yml
.github/workflows/: build-backend-container.yaml  build-ui-container.yaml
ai_manager/: Cargo.toml
ai_manager/migrations/: 20222323485_alerts.sql
ai_manager/src/: lib.rs  main.rs
ai_manager_service/: .env  Cargo.toml
ai_manager_service/migrations/: 20222323485_alerts.sql  20230805152612_updated_the_raid_to_actually_have_the_stuff_we_want.sql  20230819152155_added_the_gifted_sub_database.sql
ai_manager_service/src/: lib.rs  sqlite.rs
common/: Cargo.toml
common/src/: lib.rs
deployment/: deployment.yaml  frontend-deployment.yaml  litestream-configmap.yaml  ls-cmt.yaml  twitch-alert-service.yaml  twitch-alerts-deployment.yaml  twitch-alerts-hostpath.yaml  twitch-alerts-lb.yaml  twitch-alerts-node-port.yaml  twitch-alerts-secrets.yaml  twitch-alerts-service.yaml  twitch-alerts-statefulset.yaml
frontend/: Cargo.toml  index.html
frontend/react-frontend/: package-lock.json  package.json
frontend/react-frontend/src/: App.tsx
frontend/react-frontend/src/components/: display-alert.tsx  websocket.ts
frontend/src/: main.rs
frontend/wasm/: Cargo.toml  Dockerfile  config.json  index.html  nginx.conf  output.txt  styles.css
frontend/wasm/src/: main.rs  websocket.rs
frontend_api/: Cargo.toml
frontend_api/assets/css/: alert.css  main.css
frontend_api/src/: htmx.rs  lib.rs  main.rs  routes.rs  types.rs
frontend_api/templates/: admin.html  index.html
hack/: token.md  twitch_mock_setup.sh
kafka/: Cargo.toml
light_server/: Cargo.toml
light_server/migrations/: 20231221211941_init_database.sql
light_server/src/: main.rs
light_server/src/sql/: event.rs
messages/: Cargo.toml
messages/src/: lib.rs  messages.rs
monolith/: Cargo.toml
monolith/src/: main.rs  util.rs
scripts/: litestream.yaml  start.sh
single_app/: Cargo.toml
single_app/src/: main.rs
src/: main.rs  opts.rs  token.txt  util.rs  websocket.rs
twitch_alerts/: Cargo.toml
twitch_alerts/ai_manager/: Cargo.toml
twitch_alerts/twitch_alerts/: Cargo.toml
twitch_alerts/twitch_listener/: Cargo.toml
twitch_alerts/twitch_listener/migrations/: 20222323485_alerts.sql
twitch_alerts/twitch_listener/src/: main.rs  opts.rs  websocket.rs
twitch_chat/: Cargo.toml  index.aml
twitch_chat/src/: .app.rs.rustfmt  app.rs  main.rs  messages.rs  twitch.rs
twitch_listener/: Cargo.toml
twitch_listener/src/: lib.rs  main.rs  opts.rs  websocket.rs
twitch_listener_service/: Cargo.toml
twitch_listener_service/src/: main.rs  opts.rs  token.txt  util.rs  websocket.rs
user_service/: Cargo.toml
websocket_server_test/: Cargo.toml
websocket_server_test/src/: main.rs
