[package]
name = "twitch-alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
structopt = "0.3"
twitch_api = {path = "./twitch_api", features = [
    "reqwest",
    "helix",
    "eventsub",
    "hmac",
    "unsupported",
    "deny_unknown_fields" ]}
twitch_oauth2 = {path = "./twitch_api/twitch_oauth2" }
clap = { version = "4.1.8", features = ["derive", "env"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
dotenvy = "0.15.6"
eyre = { version = "0.6" }
futures = "0.3.26"
hyper = "0.14"
reqwest = { version = "0.11.14", features = ["json"] }
retainer = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
chatgpt_rs = "1.0.0"