[workspace]

members = [
    "ai_manager_service",
    "twitch_listener_service",
    "messages",
    "monolith",
    "kafka",
    "frontend_api",
    "user_service",
    "frontend/wasm",
    "twitch_chat",
]

exclude = [
    "twitch_api"
]

[patch.crates-io.twitch_types]
git = "https://github.com/twitch-rs/twitch_api"
