[workspace]

members = [
    "ai_manager_service",
    "twitch_listener_service",
    "messages",
    "monolith",
    "kafka",
    "frontend_api",
    "user_service",
    "frontend/wasm",
    "twitch_chat", "light_server",
]

resolver = "2"

exclude = [
    "twitch_api"
]

[workspace.dependencies]
anyhow = "1.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
structopt = "0.3"
twitch_api = { git = "https://github.com/twitch-rs/twitch_api.git", features = [
    "reqwest",
    "helix",
    "eventsub",
    "hmac",
    "unsupported",
    "mock_api"] }

clap = { version = "4.1.8", features = ["derive", "env"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
dotenvy = "0.15.6"
eyre = { version = "0.6" }
futures = "0.3.26"
hyper = { version = "0.14", features = [] }
reqwest = { version = "0.12.4", features = ["json"] }
retainer = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
messages = { path = "messages" }
ai_manager_service = { path = "ai_manager_service" }
twitch_listener_service = { path = "twitch_listener_service" }
frontend_api = { path = "frontend_api" }

# trying to fix broken dependencies
twitch_oauth2 = { git = "https://github.com/twitch-rs/twitch_api/" }
twitch_types = { git = "https://github.com/twitch-rs/twitch_api/" }
# workaround for https://github.com/twitch-rs/twitch_api/issues/256
[patch.crates-io.twitch_types]
git = "https://github.com/twitch-rs/twitch_api"
[patch.crates-io.twitch_oauth2]
git = "https://github.com/twitch-rs/twitch_api"
