[package]
name = "ai_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
twitch_api = {path = "../twitch_api", features = ["eventsub"]}
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
async-trait = "0.1.68"
anyhow = "1.0.51"
chatgpt_rs = "1.0.0"
tokio = { version = "1.14.0", features = ["full"] }
eyre = { version = "0.6" }
