[package]
name = "light_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.10", features = ["derive","string"]}
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }

