[package]
name = "websocket_server_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
messages = { path = "../messages" }
eyre = "0.6.8"
tokio-tungstenite = "0.18.0"
anyhow = "1.0.70"
env_logger = "0.10.0"
tokio = { version = "1.28.0", features = ["full"] }
futures-util = "0.3.19"
futures-channel = "0.3.28"
