[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
js-sys = "0.3"
gloo = "0.8"
wasm-bindgen = "0.2"

ws_stream_wasm = "0.7.4"
pharos = "0.5.3"
futures = "0.3.17"
reqwasm = "0.5.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
